--- a/style.css
+++ b/style.css
@@ -3,17 +3,16 @@
 }
 
 .login{
-    width: 300px;
-    height: 150px;
+    width: 100vw;
+    height: 100vh;
     position: fixed;
-    top: 150px;
-    left: calc(50% - 150px);
     display: flex;
     flex-direction: column;
     background-color: aqua;
     justify-content: center;
     align-items: center;
- }
+    z-index: 999;
+  }
 
 .header{
     width: 100vw;
@@ -76,5 +75,32 @@
     margin-bottom: 80px;
     background-color: blueviolet;
   }
+  .conteudoMensagens {
+   max-height: calc(100vh - 160px);
+   margin: 80px auto 80px auto;
+   overflow: auto;
+   display: flex;
+   flex-direction: column;
+   }
 
-  
+  ul li {
+   white-space: normal;
+   display: flex;
+   align-items: center;
+   width: 100%;
+   font-size: 14px;
+   margin-top: 5px;
+   background-color: #DCDCDC;
+}
+ul li p {
+   word-break: break-all;
+   margin: 20px 20px;
+}
+ul li p strong {
+   font-weight: 700;
+   margin-right: 10px;
+}
+
+ul li p time {
+   margin-right: 10px;
+}
