--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family:  'Roboto', sans-serif;;
+    font-family:  'Roboto', sans-serif;
 }
 
 .login{
@@ -8,10 +8,40 @@
     position: fixed;
     display: flex;
     flex-direction: column;
-    background-color: aqua;
+    background-color: #FFFFFF;
     justify-content: center;
     align-items: center;
     z-index: 999;
+  }
+
+  .botaoLogin{
+   width: 109px;
+   height: 45px;
+   background: #E7E7E7;
+   border-radius: 9px;
+   border: none;
+   color: #696969;
+   font-size: 18px;
+   margin-top: 15px;
+
+  }
+
+  .inputUsuario{
+   box-sizing: border-box;
+   width: 261px;
+   height: 54px;
+   background: #FFFFFF;
+   border: 1px solid #D7D7D7;
+   border-radius: 4px;
+   display: flex;
+   text-align: center;
+   font-size: 18px;
+  }
+
+  .logoLogin{
+   width: 130px;
+   height: 92px;
+   margin-bottom: 94px;
   }
 
 .header{
@@ -70,17 +100,16 @@
 
   .conteudoMensagens{
     width: 100vw;
-    height: 100vh;
     margin-top: 80px;
     margin-bottom: 80px;
-    background-color: blueviolet;
-  }
-  .conteudoMensagens {
+    background-color: #E5E5E5;
    max-height: calc(100vh - 160px);
    margin: 80px auto 80px auto;
    overflow: auto;
    display: flex;
    flex-direction: column;
+   font-family:  'Roboto', sans-serif;
+
    }
 
   ul li {
